<resources>
    <string name="app_name">IBM New Users</string>
    <string name="cadastrar_jogadores">Cadastrar Jogadores</string>
    <string name="entrar">Entrar</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="digite_seu_e_mail">Digite seu e-mail</string>
    <string name="cadastrar_novos_jogadores">CADASTRAR NOVOS JOGADORES</string>
    <string name="digite_seu_nick_no_jogo">Digite seu nick no jogo</string>
    <string name="nick">Nick</string>
    <string name="digite_um_jogo">Digite um jogo</string>
    <string name="qual_foi_seu_maior_rank">Qual foi seu maior Rank?</string>
    <string name="digite_seu_login">Digite seu login</string>
    <string name="nome">Nome</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="jogo">Jogo</string>
    <string name="maior_rank">Maior Rank</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>
    <string name="atualizar">Atualizar</string>
    <string name="apresentacao">Apresentacao</string>
    <string name="login_image">login_image</string>
    <string name="imagem_tela_login">imagem_tela_login</string>
    <string name="bem_vindo">Bem Vindo</string>
    <string name="primeiro_acesso_cadastre_se">Primeiro acesso? Cadastre-se!</string>
</resources>